# nfl-analytics

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: pythondev.mdc  scikit-learn.mdc
.tmp_dagster_home_2c3xy7s4/history/: runs.db
.tmp_dagster_home_2c3xy7s4/history/runs/: 9a911160-99d9-4127-ad9d-16ff23b288e7.db  e277a0c7-3258-467a-a238-2f60564bd94e.db  ef4eccd5-6b01-48d0-b01a-d0f6e272b2b6.db  facf8bd9-1637-40c6-9abb-63671218d42d.db  index.db
.tmp_dagster_home_2c3xy7s4/schedules/: schedules.db
.tmp_dagster_home_2c3xy7s4/storage/: nfl_games
.tmp_dagster_home_2c3xy7s4/storage/9a911160-99d9-4127-ad9d-16ff23b288e7/compute_logs/: nrpicgjo.err
.tmp_dagster_home_2c3xy7s4/storage/e277a0c7-3258-467a-a238-2f60564bd94e/compute_logs/: vmmiswdy.err  vmmiswdy.out
.tmp_dagster_home_2c3xy7s4/storage/ef4eccd5-6b01-48d0-b01a-d0f6e272b2b6/compute_logs/: bzjjjlqk.err
.tmp_dagster_home_2c3xy7s4/storage/facf8bd9-1637-40c6-9abb-63671218d42d/compute_logs/: opgiscrq.err
dbt/: .user.yml  dbt_cloud.yml  dbt_project.yml  packages.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/mart/: game_labels.sql  game_prediction_features.sql  game_training_dataset.sql  player_matchups.sql  player_performance_season.sql  player_performance_weekly.sql  player_season.sql  player_season_ngs.sql  player_week_features.sql  player_week_rolling.sql  player_weekly_performance.sql  schema.yml  team_game_features.sql  team_game_performance.sql  team_matchups.sql  team_performance_season.sql  team_performance_weekly.sql  team_season_features.sql  team_season_summary.sql  team_week_features.sql  team_week_rolling.sql  upcoming_games_analysis.sql
dbt/models/staging/: stg_current_schedule.sql  stg_current_stats.sql  stg_games.sql  stg_ngs.sql  stg_pbp.sql  stg_player_stats.sql  stg_players.sql  stg_rosters.sql  stg_schedule.sql  stg_team_stats.sql  stg_teams.sql
dbt/seeds/: fantasy_scoring.yaml
dbt/tests/generic/: test_nfl_business_rules.sql
docs/: nfl_data_py_reference.md  quick_production_roadmap.md
ml/models/: game_outcomes.py
ml/training/: train_game_outcome.py
models/: game_outcome_lr.pkl  game_outcome_rf.pkl
notebooks/: 01_eda.ipynb  02_data_validation.ipynb  03_random.ipynb  03_viz.ipynb
pipeline/: __init__.py
pipeline/assets/: __init__.py  nfl_current_stats.py  nfl_games.py  nfl_ngs.py  nfl_pbp.py  nfl_player_stats.py  nfl_rosters.py  nfl_schedule.py
pipeline/config/: __init__.py  settings.py
pipeline/utils/: bigquery_client.py
src/nfl_analytics/: __init__.py
src/nfl_analytics/analytics/: __init__.py
src/nfl_analytics/api/: __init__.py
src/nfl_analytics/data/: __init__.py
src/nfl_analytics/ingestion/: __init__.py
src/nfl_analytics/ml/: __init__.py
tests/: testGCP.py  test_setup.py
