[project]
name = "nfl-analytics"
version = "0.1.0"
description = "NFL Data Analysis & Predictions Platform"
authors = [{name = "Matthew Dwyer", email = "matthew@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.6.0",
    "dbt-core>=1.7.0",
    "dbt-bigquery>=1.7.0",
    "nfl-data-py>=0.3.0", # Changed from 1.0.0 to 0.3.0
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-storage>=2.10.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
